<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="leeco_settings_title">LeEco Settings</string>
    <string name="leeco_settings_summary">Device specific settings</string>
    <string name="camera_hal3_title">Camera HAL3</string>
    <string name="camera_hal3_summary">Disabling HAL3 will force the usage of HAL1 instead. Please note that Gcam mods require HAL3 and you must wait a minute before using a camera app as it will take time to restart the camera HAL and Service.</string>
    <string name="cdma_title">CDMA</string>
    <string name="cdma_summary">Disabling CDMA for China Telecom will allow it only runs on LTE, and let another sim card(China Unicom) runs on WCDMA.</string>
    <string name="core_permissions_lost">Current app missing core permissions, go to settings to grant the permissions</string>
    <string name="cam_hal_switching_hint">switching camera hal, please wait ...</string>
    <string name="net_switching_hint">switching network, please wait ...</string>
    <string name="net_switch_failed">switching failed, missing modify phone state permission</string>

    <string name="http_proxy_title">Http Proxy</string>
    <string name="http_proxy_summary">Enable or Disable system http proxy (127.0.0.1:%s)</string>
    <string name="http_proxy_port" translatable="false">20809</string>

    <string name="zjl_title">ZJL</string>
    <string name="zjl_summary">Enable or Disable magisk ZJL Module without reboot phone</string>
    <string name="zjl_switching_hint">switching ZJL, please wait ...</string>
    <string name="zjl_enable_success">enable ZJL success</string>
    <string name="zjl_disable_success">disable ZJL success</string>
    <string name="zjl_enable_failed">enable ZJL failed</string>
    <string name="zjl_disable_failed">disable ZJL failed</string>
    <string name="data_pick_title">Switch data SIM Card</string>
    <string name="data_pick_summary">Switch the SIM Card for data</string>
    <string name="status_up_time">Up time</string>
</resources>
