<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <androidx.preference.SwitchPreference
        android:key="key_camera_hal3_enable"
        android:defaultValue="true"
        android:title="@string/camera_hal3_title"
        android:summary="@string/camera_hal3_summary" />
    <androidx.preference.SwitchPreference
        android:key="key_cdma_enable"
        android:defaultValue="false"
        android:title="@string/cdma_title"
        android:summary="@string/cdma_summary" />

    <androidx.preference.SwitchPreference
        android:key="key_http_proxy_enable"
        android:defaultValue="false"
        android:title="@string/http_proxy_title"
        android:summary="@string/http_proxy_summary" />

    <androidx.preference.SwitchPreference
        android:key="key_zjl_enable"
        android:defaultValue="false"
        android:title="@string/zjl_title"
        android:summary="@string/zjl_summary" />

    <androidx.preference.Preference
        android:key="key_data_pick"
        android:title="@string/data_pick_title"
        android:summary="@string/data_pick_summary" />

</androidx.preference.PreferenceScreen>
